# magnum-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  metadata.rs
src/container/: caf.rs  mod.rs  ogg.rs
