[package]
name = "magnum"
description = "Reader to Iterator/Stream support for Opus Audio in common container formats. Includes optional traits for Kira and Rodio audio library playback support."
version = "0.1.0"
authors = ["Brent Luehr <brent@nerdcon.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/seratonik/magnum-rs"
publish = ["magnum"]
keywords = ["opus", "kira", "rodio", "xiph", "libopus", "ogg", "coreaudio", "caf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_caf = ["caf"]
with_ogg = ["ogg"]
with_rodio = ["rodio"]
with_kira = ["kira"]
default = ["with_caf", "with_ogg", "with_rodio", "with_kira"]

[dependencies]
kira = { version = "0.5.1", optional = true }
caf = { version = "0.1.0", optional = true }
ogg = { version = "0.8.0", optional = true }
rodio = { version = "0.13.1", optional = true }
audiopus = "0.2.0"
thiserror = "1.0.24"
byteorder = "1.4.3"
bitreader = "0.3.3"
