[package]
name = "magnum"
description = "Reader to Iterator/Source support for Opus Audio in common container formats. Includes optional traits for Kira and Rodio audio library playback support."
version = "1.0.1"
authors = ["Brent Luehr <brent@nerdcon.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/seratonik/magnum-rs"
keywords = ["opus", "kira", "rodio", "xiph", "ogg"]
categories = ["multimedia::encoding", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_caf = ["caf"]
with_ogg = ["ogg"]
with_rodio = ["rodio"]
with_kira = ["kira"]
default = ["with_caf", "with_ogg"]
all = ["with_caf", "with_ogg", "with_rodio", "with_kira"]

[dependencies]
kira = { version = "0.5.3", optional = true }
caf = { version = "0.1.0", optional = true }
ogg = { version = "0.8.0", optional = true }
rodio = { version = "0.14.0", optional = true }
audiopus = "0.2.0"
thiserror = "1.0.24"
byteorder = "1.4.3"
bitreader = "0.3.3"
